PDDL3/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    EXISTS

Grammar

Rule 0     S' -> formula
Rule 1     formula -> AND list_f
Rule 2     formula -> ATEND formula
Rule 3     formula -> ALWAYS formula
Rule 4     formula -> SOMETIME formula
Rule 5     formula -> WITHIN NUM formula
Rule 6     formula -> ATMOSTONCE formula
Rule 7     formula -> SOMETIMEAFTER formula formula
Rule 8     formula -> SOMETIMEBEFORE formula formula
Rule 9     formula -> ALWAYSWITHIN NUM formula formula
Rule 10    formula -> IMPLIES formula formula
Rule 11    formula -> NOT formula
Rule 12    formula -> HOLDDURING NUM NUM formula
Rule 13    formula -> HOLDAFTER NUM formula
Rule 14    formula -> FORALL list_v formula
Rule 15    formula -> formula TERM
Rule 16    formula -> vars
Rule 17    formula -> list_p
Rule 18    param -> TERM
Rule 19    param -> NUM
Rule 20    param -> VAR TERM
Rule 21    list_p -> param
Rule 22    list_p -> param param
Rule 23    list_p -> list_p param
Rule 24    list_p -> list_p formula
Rule 25    vars -> VAR TERM TYP TERM
Rule 26    list_v -> vars
Rule 27    list_v -> vars vars
Rule 28    list_v -> list_v vars
Rule 29    list_v -> LPAR list_v RPAR
Rule 30    list_f -> formula
Rule 31    list_f -> formula formula
Rule 32    list_f -> list_f formula
Rule 33    formula -> LPAR formula RPAR
Rule 34    formula -> LPAR list_p RPAR

Terminals, with rules where they appear

ALWAYS               : 3
ALWAYSWITHIN         : 9
AND                  : 1
ATEND                : 2
ATMOSTONCE           : 6
EXISTS               : 
FORALL               : 14
HOLDAFTER            : 13
HOLDDURING           : 12
IMPLIES              : 10
LPAR                 : 29 33 34
NOT                  : 11
NUM                  : 5 9 12 12 13 19
RPAR                 : 29 33 34
SOMETIME             : 4
SOMETIMEAFTER        : 7
SOMETIMEBEFORE       : 8
TERM                 : 15 18 20 25 25
TYP                  : 25
VAR                  : 20 25
WITHIN               : 5
error                : 

Nonterminals, with rules where they appear

formula              : 2 3 4 5 6 7 7 8 8 9 9 10 10 11 12 13 14 15 24 30 31 31 32 33 0
list_f               : 1 32
list_p               : 17 23 24 34
list_v               : 14 28 29
param                : 21 22 22 23
vars                 : 16 26 27 27 28

Parsing method: LALR

state 0

    (0) S' -> . formula
    (1) formula -> . AND list_f
    (2) formula -> . ATEND formula
    (3) formula -> . ALWAYS formula
    (4) formula -> . SOMETIME formula
    (5) formula -> . WITHIN NUM formula
    (6) formula -> . ATMOSTONCE formula
    (7) formula -> . SOMETIMEAFTER formula formula
    (8) formula -> . SOMETIMEBEFORE formula formula
    (9) formula -> . ALWAYSWITHIN NUM formula formula
    (10) formula -> . IMPLIES formula formula
    (11) formula -> . NOT formula
    (12) formula -> . HOLDDURING NUM NUM formula
    (13) formula -> . HOLDAFTER NUM formula
    (14) formula -> . FORALL list_v formula
    (15) formula -> . formula TERM
    (16) formula -> . vars
    (17) formula -> . list_p
    (33) formula -> . LPAR formula RPAR
    (34) formula -> . LPAR list_p RPAR
    (25) vars -> . VAR TERM TYP TERM
    (21) list_p -> . param
    (22) list_p -> . param param
    (23) list_p -> . list_p param
    (24) list_p -> . list_p formula
    (18) param -> . TERM
    (19) param -> . NUM
    (20) param -> . VAR TERM

    AND             shift and go to state 2
    ATEND           shift and go to state 3
    ALWAYS          shift and go to state 4
    SOMETIME        shift and go to state 5
    WITHIN          shift and go to state 6
    ATMOSTONCE      shift and go to state 8
    SOMETIMEAFTER   shift and go to state 9
    SOMETIMEBEFORE  shift and go to state 10
    ALWAYSWITHIN    shift and go to state 11
    IMPLIES         shift and go to state 12
    NOT             shift and go to state 13
    HOLDDURING      shift and go to state 14
    HOLDAFTER       shift and go to state 15
    FORALL          shift and go to state 16
    LPAR            shift and go to state 20
    VAR             shift and go to state 21
    TERM            shift and go to state 17
    NUM             shift and go to state 7

    formula                        shift and go to state 1
    vars                           shift and go to state 18
    list_p                         shift and go to state 19
    param                          shift and go to state 22

state 1

    (0) S' -> formula .
    (15) formula -> formula . TERM

    TERM            shift and go to state 23


state 2

    (1) formula -> AND . list_f
    (30) list_f -> . formula
    (31) list_f -> . formula formula
    (32) list_f -> . list_f formula
    (1) formula -> . AND list_f
    (2) formula -> . ATEND formula
    (3) formula -> . ALWAYS formula
    (4) formula -> . SOMETIME formula
    (5) formula -> . WITHIN NUM formula
    (6) formula -> . ATMOSTONCE formula
    (7) formula -> . SOMETIMEAFTER formula formula
    (8) formula -> . SOMETIMEBEFORE formula formula
    (9) formula -> . ALWAYSWITHIN NUM formula formula
    (10) formula -> . IMPLIES formula formula
    (11) formula -> . NOT formula
    (12) formula -> . HOLDDURING NUM NUM formula
    (13) formula -> . HOLDAFTER NUM formula
    (14) formula -> . FORALL list_v formula
    (15) formula -> . formula TERM
    (16) formula -> . vars
    (17) formula -> . list_p
    (33) formula -> . LPAR formula RPAR
    (34) formula -> . LPAR list_p RPAR
    (25) vars -> . VAR TERM TYP TERM
    (21) list_p -> . param
    (22) list_p -> . param param
    (23) list_p -> . list_p param
    (24) list_p -> . list_p formula
    (18) param -> . TERM
    (19) param -> . NUM
    (20) param -> . VAR TERM

    AND             shift and go to state 2
    ATEND           shift and go to state 3
    ALWAYS          shift and go to state 4
    SOMETIME        shift and go to state 5
    WITHIN          shift and go to state 6
    ATMOSTONCE      shift and go to state 8
    SOMETIMEAFTER   shift and go to state 9
    SOMETIMEBEFORE  shift and go to state 10
    ALWAYSWITHIN    shift and go to state 11
    IMPLIES         shift and go to state 12
    NOT             shift and go to state 13
    HOLDDURING      shift and go to state 14
    HOLDAFTER       shift and go to state 15
    FORALL          shift and go to state 16
    LPAR            shift and go to state 20
    VAR             shift and go to state 21
    TERM            shift and go to state 17
    NUM             shift and go to state 7

    list_f                         shift and go to state 24
    formula                        shift and go to state 25
    vars                           shift and go to state 18
    list_p                         shift and go to state 19
    param                          shift and go to state 22

state 3

    (2) formula -> ATEND . formula
    (1) formula -> . AND list_f
    (2) formula -> . ATEND formula
    (3) formula -> . ALWAYS formula
    (4) formula -> . SOMETIME formula
    (5) formula -> . WITHIN NUM formula
    (6) formula -> . ATMOSTONCE formula
    (7) formula -> . SOMETIMEAFTER formula formula
    (8) formula -> . SOMETIMEBEFORE formula formula
    (9) formula -> . ALWAYSWITHIN NUM formula formula
    (10) formula -> . IMPLIES formula formula
    (11) formula -> . NOT formula
    (12) formula -> . HOLDDURING NUM NUM formula
    (13) formula -> . HOLDAFTER NUM formula
    (14) formula -> . FORALL list_v formula
    (15) formula -> . formula TERM
    (16) formula -> . vars
    (17) formula -> . list_p
    (33) formula -> . LPAR formula RPAR
    (34) formula -> . LPAR list_p RPAR
    (25) vars -> . VAR TERM TYP TERM
    (21) list_p -> . param
    (22) list_p -> . param param
    (23) list_p -> . list_p param
    (24) list_p -> . list_p formula
    (18) param -> . TERM
    (19) param -> . NUM
    (20) param -> . VAR TERM

    AND             shift and go to state 2
    ATEND           shift and go to state 3
    ALWAYS          shift and go to state 4
    SOMETIME        shift and go to state 5
    WITHIN          shift and go to state 6
    ATMOSTONCE      shift and go to state 8
    SOMETIMEAFTER   shift and go to state 9
    SOMETIMEBEFORE  shift and go to state 10
    ALWAYSWITHIN    shift and go to state 11
    IMPLIES         shift and go to state 12
    NOT             shift and go to state 13
    HOLDDURING      shift and go to state 14
    HOLDAFTER       shift and go to state 15
    FORALL          shift and go to state 16
    LPAR            shift and go to state 20
    VAR             shift and go to state 21
    TERM            shift and go to state 17
    NUM             shift and go to state 7

    formula                        shift and go to state 26
    vars                           shift and go to state 18
    list_p                         shift and go to state 19
    param                          shift and go to state 22

state 4

    (3) formula -> ALWAYS . formula
    (1) formula -> . AND list_f
    (2) formula -> . ATEND formula
    (3) formula -> . ALWAYS formula
    (4) formula -> . SOMETIME formula
    (5) formula -> . WITHIN NUM formula
    (6) formula -> . ATMOSTONCE formula
    (7) formula -> . SOMETIMEAFTER formula formula
    (8) formula -> . SOMETIMEBEFORE formula formula
    (9) formula -> . ALWAYSWITHIN NUM formula formula
    (10) formula -> . IMPLIES formula formula
    (11) formula -> . NOT formula
    (12) formula -> . HOLDDURING NUM NUM formula
    (13) formula -> . HOLDAFTER NUM formula
    (14) formula -> . FORALL list_v formula
    (15) formula -> . formula TERM
    (16) formula -> . vars
    (17) formula -> . list_p
    (33) formula -> . LPAR formula RPAR
    (34) formula -> . LPAR list_p RPAR
    (25) vars -> . VAR TERM TYP TERM
    (21) list_p -> . param
    (22) list_p -> . param param
    (23) list_p -> . list_p param
    (24) list_p -> . list_p formula
    (18) param -> . TERM
    (19) param -> . NUM
    (20) param -> . VAR TERM

    AND             shift and go to state 2
    ATEND           shift and go to state 3
    ALWAYS          shift and go to state 4
    SOMETIME        shift and go to state 5
    WITHIN          shift and go to state 6
    ATMOSTONCE      shift and go to state 8
    SOMETIMEAFTER   shift and go to state 9
    SOMETIMEBEFORE  shift and go to state 10
    ALWAYSWITHIN    shift and go to state 11
    IMPLIES         shift and go to state 12
    NOT             shift and go to state 13
    HOLDDURING      shift and go to state 14
    HOLDAFTER       shift and go to state 15
    FORALL          shift and go to state 16
    LPAR            shift and go to state 20
    VAR             shift and go to state 21
    TERM            shift and go to state 17
    NUM             shift and go to state 7

    formula                        shift and go to state 27
    vars                           shift and go to state 18
    list_p                         shift and go to state 19
    param                          shift and go to state 22

state 5

    (4) formula -> SOMETIME . formula
    (1) formula -> . AND list_f
    (2) formula -> . ATEND formula
    (3) formula -> . ALWAYS formula
    (4) formula -> . SOMETIME formula
    (5) formula -> . WITHIN NUM formula
    (6) formula -> . ATMOSTONCE formula
    (7) formula -> . SOMETIMEAFTER formula formula
    (8) formula -> . SOMETIMEBEFORE formula formula
    (9) formula -> . ALWAYSWITHIN NUM formula formula
    (10) formula -> . IMPLIES formula formula
    (11) formula -> . NOT formula
    (12) formula -> . HOLDDURING NUM NUM formula
    (13) formula -> . HOLDAFTER NUM formula
    (14) formula -> . FORALL list_v formula
    (15) formula -> . formula TERM
    (16) formula -> . vars
    (17) formula -> . list_p
    (33) formula -> . LPAR formula RPAR
    (34) formula -> . LPAR list_p RPAR
    (25) vars -> . VAR TERM TYP TERM
    (21) list_p -> . param
    (22) list_p -> . param param
    (23) list_p -> . list_p param
    (24) list_p -> . list_p formula
    (18) param -> . TERM
    (19) param -> . NUM
    (20) param -> . VAR TERM

    AND             shift and go to state 2
    ATEND           shift and go to state 3
    ALWAYS          shift and go to state 4
    SOMETIME        shift and go to state 5
    WITHIN          shift and go to state 6
    ATMOSTONCE      shift and go to state 8
    SOMETIMEAFTER   shift and go to state 9
    SOMETIMEBEFORE  shift and go to state 10
    ALWAYSWITHIN    shift and go to state 11
    IMPLIES         shift and go to state 12
    NOT             shift and go to state 13
    HOLDDURING      shift and go to state 14
    HOLDAFTER       shift and go to state 15
    FORALL          shift and go to state 16
    LPAR            shift and go to state 20
    VAR             shift and go to state 21
    TERM            shift and go to state 17
    NUM             shift and go to state 7

    formula                        shift and go to state 28
    vars                           shift and go to state 18
    list_p                         shift and go to state 19
    param                          shift and go to state 22

state 6

    (5) formula -> WITHIN . NUM formula

    NUM             shift and go to state 29


state 7

    (19) param -> NUM .

    TERM            reduce using rule 19 (param -> NUM .)
    NUM             reduce using rule 19 (param -> NUM .)
    VAR             reduce using rule 19 (param -> NUM .)
    AND             reduce using rule 19 (param -> NUM .)
    ATEND           reduce using rule 19 (param -> NUM .)
    ALWAYS          reduce using rule 19 (param -> NUM .)
    SOMETIME        reduce using rule 19 (param -> NUM .)
    WITHIN          reduce using rule 19 (param -> NUM .)
    ATMOSTONCE      reduce using rule 19 (param -> NUM .)
    SOMETIMEAFTER   reduce using rule 19 (param -> NUM .)
    SOMETIMEBEFORE  reduce using rule 19 (param -> NUM .)
    ALWAYSWITHIN    reduce using rule 19 (param -> NUM .)
    IMPLIES         reduce using rule 19 (param -> NUM .)
    NOT             reduce using rule 19 (param -> NUM .)
    HOLDDURING      reduce using rule 19 (param -> NUM .)
    HOLDAFTER       reduce using rule 19 (param -> NUM .)
    FORALL          reduce using rule 19 (param -> NUM .)
    LPAR            reduce using rule 19 (param -> NUM .)
    $end            reduce using rule 19 (param -> NUM .)
    RPAR            reduce using rule 19 (param -> NUM .)


state 8

    (6) formula -> ATMOSTONCE . formula
    (1) formula -> . AND list_f
    (2) formula -> . ATEND formula
    (3) formula -> . ALWAYS formula
    (4) formula -> . SOMETIME formula
    (5) formula -> . WITHIN NUM formula
    (6) formula -> . ATMOSTONCE formula
    (7) formula -> . SOMETIMEAFTER formula formula
    (8) formula -> . SOMETIMEBEFORE formula formula
    (9) formula -> . ALWAYSWITHIN NUM formula formula
    (10) formula -> . IMPLIES formula formula
    (11) formula -> . NOT formula
    (12) formula -> . HOLDDURING NUM NUM formula
    (13) formula -> . HOLDAFTER NUM formula
    (14) formula -> . FORALL list_v formula
    (15) formula -> . formula TERM
    (16) formula -> . vars
    (17) formula -> . list_p
    (33) formula -> . LPAR formula RPAR
    (34) formula -> . LPAR list_p RPAR
    (25) vars -> . VAR TERM TYP TERM
    (21) list_p -> . param
    (22) list_p -> . param param
    (23) list_p -> . list_p param
    (24) list_p -> . list_p formula
    (18) param -> . TERM
    (19) param -> . NUM
    (20) param -> . VAR TERM

    AND             shift and go to state 2
    ATEND           shift and go to state 3
    ALWAYS          shift and go to state 4
    SOMETIME        shift and go to state 5
    WITHIN          shift and go to state 6
    ATMOSTONCE      shift and go to state 8
    SOMETIMEAFTER   shift and go to state 9
    SOMETIMEBEFORE  shift and go to state 10
    ALWAYSWITHIN    shift and go to state 11
    IMPLIES         shift and go to state 12
    NOT             shift and go to state 13
    HOLDDURING      shift and go to state 14
    HOLDAFTER       shift and go to state 15
    FORALL          shift and go to state 16
    LPAR            shift and go to state 20
    VAR             shift and go to state 21
    TERM            shift and go to state 17
    NUM             shift and go to state 7

    formula                        shift and go to state 30
    vars                           shift and go to state 18
    list_p                         shift and go to state 19
    param                          shift and go to state 22

state 9

    (7) formula -> SOMETIMEAFTER . formula formula
    (1) formula -> . AND list_f
    (2) formula -> . ATEND formula
    (3) formula -> . ALWAYS formula
    (4) formula -> . SOMETIME formula
    (5) formula -> . WITHIN NUM formula
    (6) formula -> . ATMOSTONCE formula
    (7) formula -> . SOMETIMEAFTER formula formula
    (8) formula -> . SOMETIMEBEFORE formula formula
    (9) formula -> . ALWAYSWITHIN NUM formula formula
    (10) formula -> . IMPLIES formula formula
    (11) formula -> . NOT formula
    (12) formula -> . HOLDDURING NUM NUM formula
    (13) formula -> . HOLDAFTER NUM formula
    (14) formula -> . FORALL list_v formula
    (15) formula -> . formula TERM
    (16) formula -> . vars
    (17) formula -> . list_p
    (33) formula -> . LPAR formula RPAR
    (34) formula -> . LPAR list_p RPAR
    (25) vars -> . VAR TERM TYP TERM
    (21) list_p -> . param
    (22) list_p -> . param param
    (23) list_p -> . list_p param
    (24) list_p -> . list_p formula
    (18) param -> . TERM
    (19) param -> . NUM
    (20) param -> . VAR TERM

    AND             shift and go to state 2
    ATEND           shift and go to state 3
    ALWAYS          shift and go to state 4
    SOMETIME        shift and go to state 5
    WITHIN          shift and go to state 6
    ATMOSTONCE      shift and go to state 8
    SOMETIMEAFTER   shift and go to state 9
    SOMETIMEBEFORE  shift and go to state 10
    ALWAYSWITHIN    shift and go to state 11
    IMPLIES         shift and go to state 12
    NOT             shift and go to state 13
    HOLDDURING      shift and go to state 14
    HOLDAFTER       shift and go to state 15
    FORALL          shift and go to state 16
    LPAR            shift and go to state 20
    VAR             shift and go to state 21
    TERM            shift and go to state 17
    NUM             shift and go to state 7

    formula                        shift and go to state 31
    vars                           shift and go to state 18
    list_p                         shift and go to state 19
    param                          shift and go to state 22

state 10

    (8) formula -> SOMETIMEBEFORE . formula formula
    (1) formula -> . AND list_f
    (2) formula -> . ATEND formula
    (3) formula -> . ALWAYS formula
    (4) formula -> . SOMETIME formula
    (5) formula -> . WITHIN NUM formula
    (6) formula -> . ATMOSTONCE formula
    (7) formula -> . SOMETIMEAFTER formula formula
    (8) formula -> . SOMETIMEBEFORE formula formula
    (9) formula -> . ALWAYSWITHIN NUM formula formula
    (10) formula -> . IMPLIES formula formula
    (11) formula -> . NOT formula
    (12) formula -> . HOLDDURING NUM NUM formula
    (13) formula -> . HOLDAFTER NUM formula
    (14) formula -> . FORALL list_v formula
    (15) formula -> . formula TERM
    (16) formula -> . vars
    (17) formula -> . list_p
    (33) formula -> . LPAR formula RPAR
    (34) formula -> . LPAR list_p RPAR
    (25) vars -> . VAR TERM TYP TERM
    (21) list_p -> . param
    (22) list_p -> . param param
    (23) list_p -> . list_p param
    (24) list_p -> . list_p formula
    (18) param -> . TERM
    (19) param -> . NUM
    (20) param -> . VAR TERM

    AND             shift and go to state 2
    ATEND           shift and go to state 3
    ALWAYS          shift and go to state 4
    SOMETIME        shift and go to state 5
    WITHIN          shift and go to state 6
    ATMOSTONCE      shift and go to state 8
    SOMETIMEAFTER   shift and go to state 9
    SOMETIMEBEFORE  shift and go to state 10
    ALWAYSWITHIN    shift and go to state 11
    IMPLIES         shift and go to state 12
    NOT             shift and go to state 13
    HOLDDURING      shift and go to state 14
    HOLDAFTER       shift and go to state 15
    FORALL          shift and go to state 16
    LPAR            shift and go to state 20
    VAR             shift and go to state 21
    TERM            shift and go to state 17
    NUM             shift and go to state 7

    formula                        shift and go to state 32
    vars                           shift and go to state 18
    list_p                         shift and go to state 19
    param                          shift and go to state 22

state 11

    (9) formula -> ALWAYSWITHIN . NUM formula formula

    NUM             shift and go to state 33


state 12

    (10) formula -> IMPLIES . formula formula
    (1) formula -> . AND list_f
    (2) formula -> . ATEND formula
    (3) formula -> . ALWAYS formula
    (4) formula -> . SOMETIME formula
    (5) formula -> . WITHIN NUM formula
    (6) formula -> . ATMOSTONCE formula
    (7) formula -> . SOMETIMEAFTER formula formula
    (8) formula -> . SOMETIMEBEFORE formula formula
    (9) formula -> . ALWAYSWITHIN NUM formula formula
    (10) formula -> . IMPLIES formula formula
    (11) formula -> . NOT formula
    (12) formula -> . HOLDDURING NUM NUM formula
    (13) formula -> . HOLDAFTER NUM formula
    (14) formula -> . FORALL list_v formula
    (15) formula -> . formula TERM
    (16) formula -> . vars
    (17) formula -> . list_p
    (33) formula -> . LPAR formula RPAR
    (34) formula -> . LPAR list_p RPAR
    (25) vars -> . VAR TERM TYP TERM
    (21) list_p -> . param
    (22) list_p -> . param param
    (23) list_p -> . list_p param
    (24) list_p -> . list_p formula
    (18) param -> . TERM
    (19) param -> . NUM
    (20) param -> . VAR TERM

    AND             shift and go to state 2
    ATEND           shift and go to state 3
    ALWAYS          shift and go to state 4
    SOMETIME        shift and go to state 5
    WITHIN          shift and go to state 6
    ATMOSTONCE      shift and go to state 8
    SOMETIMEAFTER   shift and go to state 9
    SOMETIMEBEFORE  shift and go to state 10
    ALWAYSWITHIN    shift and go to state 11
    IMPLIES         shift and go to state 12
    NOT             shift and go to state 13
    HOLDDURING      shift and go to state 14
    HOLDAFTER       shift and go to state 15
    FORALL          shift and go to state 16
    LPAR            shift and go to state 20
    VAR             shift and go to state 21
    TERM            shift and go to state 17
    NUM             shift and go to state 7

    formula                        shift and go to state 34
    vars                           shift and go to state 18
    list_p                         shift and go to state 19
    param                          shift and go to state 22

state 13

    (11) formula -> NOT . formula
    (1) formula -> . AND list_f
    (2) formula -> . ATEND formula
    (3) formula -> . ALWAYS formula
    (4) formula -> . SOMETIME formula
    (5) formula -> . WITHIN NUM formula
    (6) formula -> . ATMOSTONCE formula
    (7) formula -> . SOMETIMEAFTER formula formula
    (8) formula -> . SOMETIMEBEFORE formula formula
    (9) formula -> . ALWAYSWITHIN NUM formula formula
    (10) formula -> . IMPLIES formula formula
    (11) formula -> . NOT formula
    (12) formula -> . HOLDDURING NUM NUM formula
    (13) formula -> . HOLDAFTER NUM formula
    (14) formula -> . FORALL list_v formula
    (15) formula -> . formula TERM
    (16) formula -> . vars
    (17) formula -> . list_p
    (33) formula -> . LPAR formula RPAR
    (34) formula -> . LPAR list_p RPAR
    (25) vars -> . VAR TERM TYP TERM
    (21) list_p -> . param
    (22) list_p -> . param param
    (23) list_p -> . list_p param
    (24) list_p -> . list_p formula
    (18) param -> . TERM
    (19) param -> . NUM
    (20) param -> . VAR TERM

    AND             shift and go to state 2
    ATEND           shift and go to state 3
    ALWAYS          shift and go to state 4
    SOMETIME        shift and go to state 5
    WITHIN          shift and go to state 6
    ATMOSTONCE      shift and go to state 8
    SOMETIMEAFTER   shift and go to state 9
    SOMETIMEBEFORE  shift and go to state 10
    ALWAYSWITHIN    shift and go to state 11
    IMPLIES         shift and go to state 12
    NOT             shift and go to state 13
    HOLDDURING      shift and go to state 14
    HOLDAFTER       shift and go to state 15
    FORALL          shift and go to state 16
    LPAR            shift and go to state 20
    VAR             shift and go to state 21
    TERM            shift and go to state 17
    NUM             shift and go to state 7

    formula                        shift and go to state 35
    vars                           shift and go to state 18
    list_p                         shift and go to state 19
    param                          shift and go to state 22

state 14

    (12) formula -> HOLDDURING . NUM NUM formula

    NUM             shift and go to state 36


state 15

    (13) formula -> HOLDAFTER . NUM formula

    NUM             shift and go to state 37


state 16

    (14) formula -> FORALL . list_v formula
    (26) list_v -> . vars
    (27) list_v -> . vars vars
    (28) list_v -> . list_v vars
    (29) list_v -> . LPAR list_v RPAR
    (25) vars -> . VAR TERM TYP TERM

    LPAR            shift and go to state 40
    VAR             shift and go to state 41

    list_v                         shift and go to state 38
    vars                           shift and go to state 39

state 17

    (18) param -> TERM .

    TERM            reduce using rule 18 (param -> TERM .)
    NUM             reduce using rule 18 (param -> TERM .)
    VAR             reduce using rule 18 (param -> TERM .)
    AND             reduce using rule 18 (param -> TERM .)
    ATEND           reduce using rule 18 (param -> TERM .)
    ALWAYS          reduce using rule 18 (param -> TERM .)
    SOMETIME        reduce using rule 18 (param -> TERM .)
    WITHIN          reduce using rule 18 (param -> TERM .)
    ATMOSTONCE      reduce using rule 18 (param -> TERM .)
    SOMETIMEAFTER   reduce using rule 18 (param -> TERM .)
    SOMETIMEBEFORE  reduce using rule 18 (param -> TERM .)
    ALWAYSWITHIN    reduce using rule 18 (param -> TERM .)
    IMPLIES         reduce using rule 18 (param -> TERM .)
    NOT             reduce using rule 18 (param -> TERM .)
    HOLDDURING      reduce using rule 18 (param -> TERM .)
    HOLDAFTER       reduce using rule 18 (param -> TERM .)
    FORALL          reduce using rule 18 (param -> TERM .)
    LPAR            reduce using rule 18 (param -> TERM .)
    $end            reduce using rule 18 (param -> TERM .)
    RPAR            reduce using rule 18 (param -> TERM .)


state 18

    (16) formula -> vars .

    TERM            reduce using rule 16 (formula -> vars .)
    $end            reduce using rule 16 (formula -> vars .)
    AND             reduce using rule 16 (formula -> vars .)
    ATEND           reduce using rule 16 (formula -> vars .)
    ALWAYS          reduce using rule 16 (formula -> vars .)
    SOMETIME        reduce using rule 16 (formula -> vars .)
    WITHIN          reduce using rule 16 (formula -> vars .)
    ATMOSTONCE      reduce using rule 16 (formula -> vars .)
    SOMETIMEAFTER   reduce using rule 16 (formula -> vars .)
    SOMETIMEBEFORE  reduce using rule 16 (formula -> vars .)
    ALWAYSWITHIN    reduce using rule 16 (formula -> vars .)
    IMPLIES         reduce using rule 16 (formula -> vars .)
    NOT             reduce using rule 16 (formula -> vars .)
    HOLDDURING      reduce using rule 16 (formula -> vars .)
    HOLDAFTER       reduce using rule 16 (formula -> vars .)
    FORALL          reduce using rule 16 (formula -> vars .)
    LPAR            reduce using rule 16 (formula -> vars .)
    VAR             reduce using rule 16 (formula -> vars .)
    NUM             reduce using rule 16 (formula -> vars .)
    RPAR            reduce using rule 16 (formula -> vars .)


state 19

    (17) formula -> list_p .
    (23) list_p -> list_p . param
    (24) list_p -> list_p . formula
    (18) param -> . TERM
    (19) param -> . NUM
    (20) param -> . VAR TERM
    (1) formula -> . AND list_f
    (2) formula -> . ATEND formula
    (3) formula -> . ALWAYS formula
    (4) formula -> . SOMETIME formula
    (5) formula -> . WITHIN NUM formula
    (6) formula -> . ATMOSTONCE formula
    (7) formula -> . SOMETIMEAFTER formula formula
    (8) formula -> . SOMETIMEBEFORE formula formula
    (9) formula -> . ALWAYSWITHIN NUM formula formula
    (10) formula -> . IMPLIES formula formula
    (11) formula -> . NOT formula
    (12) formula -> . HOLDDURING NUM NUM formula
    (13) formula -> . HOLDAFTER NUM formula
    (14) formula -> . FORALL list_v formula
    (15) formula -> . formula TERM
    (16) formula -> . vars
    (17) formula -> . list_p
    (33) formula -> . LPAR formula RPAR
    (34) formula -> . LPAR list_p RPAR
    (25) vars -> . VAR TERM TYP TERM
    (21) list_p -> . param
    (22) list_p -> . param param
    (23) list_p -> . list_p param
    (24) list_p -> . list_p formula
